# FloriBot4.0

./: .gitmessage  .gitmodules  README.md
base/: CMakeLists.txt
base/launch/: base_node.launch
base/msg/: Angle.msg  Wheels.msg
dynamic_footprint/: CMakeLists.txt  package.xml
dynamic_footprint/cfg/: dyn_footprint.cfg  footprint_mode.cfg
dynamic_footprint/launch/: dynamic_footprint.launch
dynamic_footprint/scripts/: dyn_footprint_node.py
floribot/: CMakeLists.txt  package.xml
floribot/launch/: launch_cameras.launch  own_laserscan_multi_merger.launch  own_scanner.launch  robot.launch
floribot/param/: camera_front_param.yaml  camera_rear_param.yaml  scanner_front_param.yaml  scanner_rear_param.yaml
nav2d/: CMakeLists.txt  package.xml
pathfollowing/: CMakeLists.txt  package.xml
pathfollowing/include/pathfollowing_node/: pathfollowing.h
pathfollowing/launch/: pathfollowing.launch
pathfollowing/src/: pathFollowingControl.cpp  pathfollowing_node.cpp  pathfollowing_node.py
pathfollowing/world/: clear_world.world  floribot.inc  pantilt.inc  rviz_config.rviz  task1.world
plc_connection/: CMakeLists.txt  package.xml
plot_navigation/: CMakeLists.txt  package.xml
pointcloud_preprocessing/: CMakeLists.txt  camera_front_param.yaml  camera_rear_param.yaml  package.xml
ros_bridge/: CMakeLists.txt  package.xml
send_goal_sequence/: CMakeLists.txt  README.md  package.xml
send_simple_goal/: CMakeLists.txt  package.xml
sick_scan-master/: CMakeLists.txt
switch_base_link/: CMakeLists.txt  package.xml
switch_nav_base/: CMakeLists.txt  package.xml
(+135 files in other folders)
